--- a/Katherine_API/appsettings.json
+++ b/Katherine_API/appsettings.json
@@ -15,8 +15,13 @@
     "Motor": "MSSQL"
   },
   "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:61955",
-    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "64A63153-11C1-4919-9133-EFAF99A9B456",
+    "ValidateIssuer": true,
+    "ValidIssuer": "https://localhost:5021",
+    "ValidateAudience": true,
+    "ValidAudience": "https://localhost:5021",
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true
   }
 }
